proj2/src/cool.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | error ';'

    7 feature_list: %empty
    8             | n_feature_list

    9 n_feature_list: feature ';'
   10               | n_feature_list feature ';'

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}'
   12        | auxi_feature
   13        | error

   14 auxi_feature: OBJECTID ':' TYPEID
   15             | OBJECTID ':' TYPEID ASSIGN expr

   16 formal_list: %empty
   17            | n_formal_list

   18 n_formal_list: OBJECTID ':' TYPEID ',' n_formal_list
   19              | OBJECTID ':' TYPEID

   20 case_list: case_list OBJECTID ':' TYPEID DARROW expr ';'
   21          | OBJECTID ':' TYPEID DARROW expr ';'

   22 expr_block: expr_block expr ';'
   23           | expr ';'
   24           | error ';'

   25 expr_list: expr_list ',' expr
   26          | expr
   27          | %empty

   28 expr_with_no: expr
   29             | %empty

   30 expr_let: OBJECTID ':' TYPEID IN expr
   31         | OBJECTID ':' TYPEID ASSIGN expr ',' expr_let
   32         | OBJECTID ':' TYPEID ',' expr_let
   33         | OBJECTID ':' TYPEID ASSIGN expr IN expr
   34         | error IN expr
   35         | error ',' expr_let

   36 expr: OBJECTID ASSIGN expr
   37     | expr '.' OBJECTID '(' expr_list ')'
   38     | OBJECTID '(' expr_list ')'
   39     | expr '@' TYPEID '.' OBJECTID '(' expr_list ')'
   40     | IF expr THEN expr ELSE expr FI
   41     | WHILE expr LOOP expr_with_no POOL
   42     | '{' expr_block '}'
   43     | LET expr_let
   44     | CASE expr OF case_list ESAC
   45     | NEW TYPEID
   46     | ISVOID expr
   47     | expr '+' expr
   48     | expr '-' expr
   49     | expr '*' expr
   50     | expr '/' expr
   51     | '~' expr
   52     | expr '<' expr
   53     | expr LE expr
   54     | expr '=' expr
   55     | NOT expr
   56     | '(' expr ')'
   57     | OBJECTID
   58     | INT_CONST
   59     | STR_CONST
   60     | BOOL_CONST


Terminals, with rules where they appear

$end (0) 0
'(' (40) 11 37 38 39 56
')' (41) 11 37 38 39 56
'*' (42) 49
'+' (43) 47
',' (44) 18 25 31 32 35
'-' (45) 48
'.' (46) 37 39
'/' (47) 50
':' (58) 11 14 15 18 19 20 21 30 31 32 33
';' (59) 4 5 6 9 10 20 21 22 23 24
'<' (60) 52
'=' (61) 54
'@' (64) 39
'{' (123) 4 5 11 42
'}' (125) 4 5 11 42
'~' (126) 51
error (256) 6 13 24 34 35
CLASS (258) 4 5
ELSE (259) 40
FI (260) 40
IF (261) 40
IN (262) 30 33 34
INHERITS (263) 5
LET (264) 43
LOOP (265) 41
POOL (266) 41
THEN (267) 40
WHILE (268) 41
CASE (269) 44
ESAC (270) 44
OF (271) 44
DARROW (272) 20 21
NEW (273) 45
ISVOID (274) 46
STR_CONST (275) 59
INT_CONST (276) 58
BOOL_CONST (277) 60
TYPEID (278) 4 5 11 14 15 18 19 20 21 30 31 32 33 39 45
OBJECTID (279) 11 14 15 18 19 20 21 30 31 32 33 36 37 38 39 57
ASSIGN (280) 15 31 33 36
NOT (281) 55
LE (282) 53
ERROR (283)
LET_PREC (285)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
program (47)
    on left: 1, on right: 0
class_list (48)
    on left: 2 3, on right: 1 3
class (49)
    on left: 4 5 6, on right: 2 3
feature_list (50)
    on left: 7 8, on right: 4 5
n_feature_list (51)
    on left: 9 10, on right: 8 10
feature (52)
    on left: 11 12 13, on right: 9 10
auxi_feature (53)
    on left: 14 15, on right: 12
formal_list (54)
    on left: 16 17, on right: 11
n_formal_list (55)
    on left: 18 19, on right: 17 18
case_list (56)
    on left: 20 21, on right: 20 44
expr_block (57)
    on left: 22 23 24, on right: 22 42
expr_list (58)
    on left: 25 26 27, on right: 25 37 38 39
expr_with_no (59)
    on left: 28 29, on right: 41
expr_let (60)
    on left: 30 31 32 33 34 35, on right: 31 32 35 43
expr (61)
    on left: 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53
    54 55 56 57 58 59 60, on right: 11 15 20 21 22 23 25 26 28 30 31
    33 34 36 37 39 40 41 44 46 47 48 49 50 51 52 53 54 55 56


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    6 class: error . ';'

    ';'  shift, and go to state 6


State 2

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 9


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    6 class: error ';' .

    $default  reduce using rule 6 (class)


State 7

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 8

    0 $accept: program $end .

    $default  accept


State 9

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 12


State 11

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    '}'  reduce using rule 7 (feature_list)

    feature_list    go to state 15
    n_feature_list  go to state 16
    feature         go to state 17
    auxi_feature    go to state 18


State 12

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 19


State 13

   13 feature: error .

    $default  reduce using rule 13 (feature)


State 14

   11 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}'
   14 auxi_feature: OBJECTID . ':' TYPEID
   15             | OBJECTID . ':' TYPEID ASSIGN expr

    '('  shift, and go to state 20
    ':'  shift, and go to state 21


State 15

    4 class: CLASS TYPEID '{' feature_list . '}' ';'

    '}'  shift, and go to state 22


State 16

    8 feature_list: n_feature_list .
   10 n_feature_list: n_feature_list . feature ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    '}'  reduce using rule 8 (feature_list)

    feature       go to state 23
    auxi_feature  go to state 18


State 17

    9 n_feature_list: feature . ';'

    ';'  shift, and go to state 24


State 18

   12 feature: auxi_feature .

    $default  reduce using rule 12 (feature)


State 19

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    '}'  reduce using rule 7 (feature_list)

    feature_list    go to state 25
    n_feature_list  go to state 16
    feature         go to state 17
    auxi_feature    go to state 18


State 20

   11 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 26

    $default  reduce using rule 16 (formal_list)

    formal_list    go to state 27
    n_formal_list  go to state 28


State 21

   14 auxi_feature: OBJECTID ':' . TYPEID
   15             | OBJECTID ':' . TYPEID ASSIGN expr

    TYPEID  shift, and go to state 29


State 22

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 30


State 23

   10 n_feature_list: n_feature_list feature . ';'

    ';'  shift, and go to state 31


State 24

    9 n_feature_list: feature ';' .

    $default  reduce using rule 9 (n_feature_list)


State 25

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'

    '}'  shift, and go to state 32


State 26

   18 n_formal_list: OBJECTID . ':' TYPEID ',' n_formal_list
   19              | OBJECTID . ':' TYPEID

    ':'  shift, and go to state 33


State 27

   11 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}'

    ')'  shift, and go to state 34


State 28

   17 formal_list: n_formal_list .

    $default  reduce using rule 17 (formal_list)


State 29

   14 auxi_feature: OBJECTID ':' TYPEID .
   15             | OBJECTID ':' TYPEID . ASSIGN expr

    ASSIGN  shift, and go to state 35

    $default  reduce using rule 14 (auxi_feature)


State 30

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 31

   10 n_feature_list: n_feature_list feature ';' .

    $default  reduce using rule 10 (n_feature_list)


State 32

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 36


State 33

   18 n_formal_list: OBJECTID ':' . TYPEID ',' n_formal_list
   19              | OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 37


State 34

   11 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 38


State 35

   15 auxi_feature: OBJECTID ':' TYPEID ASSIGN . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 53


State 36

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 37

   18 n_formal_list: OBJECTID ':' TYPEID . ',' n_formal_list
   19              | OBJECTID ':' TYPEID .

    ','  shift, and go to state 54

    $default  reduce using rule 19 (n_formal_list)


State 38

   11 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 55


State 39

   40 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 56


State 40

   43 expr: LET . expr_let

    error     shift, and go to state 57
    OBJECTID  shift, and go to state 58

    expr_let  go to state 59


State 41

   41 expr: WHILE . expr LOOP expr_with_no POOL

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 60


State 42

   44 expr: CASE . expr OF case_list ESAC

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 61


State 43

   45 expr: NEW . TYPEID

    TYPEID  shift, and go to state 62


State 44

   46 expr: ISVOID . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 63


State 45

   59 expr: STR_CONST .

    $default  reduce using rule 59 (expr)


State 46

   58 expr: INT_CONST .

    $default  reduce using rule 58 (expr)


State 47

   60 expr: BOOL_CONST .

    $default  reduce using rule 60 (expr)


State 48

   36 expr: OBJECTID . ASSIGN expr
   38     | OBJECTID . '(' expr_list ')'
   57     | OBJECTID .

    ASSIGN  shift, and go to state 64
    '('     shift, and go to state 65

    $default  reduce using rule 57 (expr)


State 49

   55 expr: NOT . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 66


State 50

   51 expr: '~' . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 67


State 51

   42 expr: '{' . expr_block '}'

    error       shift, and go to state 68
    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr_block  go to state 69
    expr        go to state 70


State 52

   56 expr: '(' . expr ')'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 71


State 53

   15 auxi_feature: OBJECTID ':' TYPEID ASSIGN expr .
   37 expr: expr . '.' OBJECTID '(' expr_list ')'
   39     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   47     | expr . '+' expr
   48     | expr . '-' expr
   49     | expr . '*' expr
   50     | expr . '/' expr
   52     | expr . '<' expr
   53     | expr . LE expr
   54     | expr . '=' expr

    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 15 (auxi_feature)


State 54

   18 n_formal_list: OBJECTID ':' TYPEID ',' . n_formal_list

    OBJECTID  shift, and go to state 26

    n_formal_list  go to state 81


State 55

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 82


State 56

   37 expr: expr . '.' OBJECTID '(' expr_list ')'
   39     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   40     | IF expr . THEN expr ELSE expr FI
   47     | expr . '+' expr
   48     | expr . '-' expr
   49     | expr . '*' expr
   50     | expr . '/' expr
   52     | expr . '<' expr
   53     | expr . LE expr
   54     | expr . '=' expr

    THEN  shift, and go to state 83
    LE    shift, and go to state 72
    '<'   shift, and go to state 73
    '='   shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '@'   shift, and go to state 79
    '.'   shift, and go to state 80


State 57

   34 expr_let: error . IN expr
   35         | error . ',' expr_let

    IN   shift, and go to state 84
    ','  shift, and go to state 85


State 58

   30 expr_let: OBJECTID . ':' TYPEID IN expr
   31         | OBJECTID . ':' TYPEID ASSIGN expr ',' expr_let
   32         | OBJECTID . ':' TYPEID ',' expr_let
   33         | OBJECTID . ':' TYPEID ASSIGN expr IN expr

    ':'  shift, and go to state 86


State 59

   43 expr: LET expr_let .

    $default  reduce using rule 43 (expr)


State 60

   37 expr: expr . '.' OBJECTID '(' expr_list ')'
   39     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   41     | WHILE expr . LOOP expr_with_no POOL
   47     | expr . '+' expr
   48     | expr . '-' expr
   49     | expr . '*' expr
   50     | expr . '/' expr
   52     | expr . '<' expr
   53     | expr . LE expr
   54     | expr . '=' expr

    LOOP  shift, and go to state 87
    LE    shift, and go to state 72
    '<'   shift, and go to state 73
    '='   shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '@'   shift, and go to state 79
    '.'   shift, and go to state 80


State 61

   37 expr: expr . '.' OBJECTID '(' expr_list ')'
   39     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   44     | CASE expr . OF case_list ESAC
   47     | expr . '+' expr
   48     | expr . '-' expr
   49     | expr . '*' expr
   50     | expr . '/' expr
   52     | expr . '<' expr
   53     | expr . LE expr
   54     | expr . '=' expr

    OF   shift, and go to state 88
    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80


State 62

   45 expr: NEW TYPEID .

    $default  reduce using rule 45 (expr)


State 63

   37 expr: expr . '.' OBJECTID '(' expr_list ')'
   39     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   46     | ISVOID expr .
   47     | expr . '+' expr
   48     | expr . '-' expr
   49     | expr . '*' expr
   50     | expr . '/' expr
   52     | expr . '<' expr
   53     | expr . LE expr
   54     | expr . '=' expr

    '@'  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 46 (expr)


State 64

   36 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 89


State 65

   38 expr: OBJECTID '(' . expr_list ')'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    $default  reduce using rule 27 (expr_list)

    expr_list  go to state 90
    expr       go to state 91


State 66

   37 expr: expr . '.' OBJECTID '(' expr_list ')'
   39     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   47     | expr . '+' expr
   48     | expr . '-' expr
   49     | expr . '*' expr
   50     | expr . '/' expr
   52     | expr . '<' expr
   53     | expr . LE expr
   54     | expr . '=' expr
   55     | NOT expr .

    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 55 (expr)


State 67
